--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "pug": "^2.0.0-rc.1",
-    "write-file-promise": "^1.0.0"
+    "express-session": "^1.15.2",
+    "session-file-store": "^1.0.0"
   }
 }
