--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "pug": "^2.0.0-rc.1",
     "express-session": "^1.15.2",
+    "lodash": "^4.17.4",
+    "pug": "^2.0.0-rc.1",
     "session-file-store": "^1.0.0"
   }
 }
